# nxinfo

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/jl/nxinfo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  nstool_jni.cpp
app/src/main/java/com/jl/nxinfo/: BuildAdapter.kt  CheatAdapter.kt  CheatFileManager.kt  CheatSearchHelper.kt  CheatViewModel.kt  ChineseConverter.kt  DownloadHelper.kt  FirstFragment.kt  GameInfo.kt  GameSearchAdapter.kt  MainActivity.kt  ProdKeysManager.kt  RomInfoViewModel.kt  SearchFragment.kt  SearchViewModel.kt  SecondFragment.kt  SwitchRomInfo.kt  SwitchRomParser.kt
app/src/main/jni/: .gitignore  EsTikProcess.h  GameCardProcess.cpp  GameCardProcess.h  IniProcess.h  KeyBag.cpp  KipProcess.h  NcaProcess.cpp  NcaProcess.h  NroProcess.h  NsoProcess.cpp  NsoProcess.h
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  fragment_first.xml  fragment_search.xml  fragment_second.xml  item_build.xml  item_cheat.xml  item_game_search.xml
app/src/main/res/layout-land/: content_main.xml
app/src/main/res/menu/: bottom_nav_menu.xml  menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/jl/nxinfo/: ExampleUnitTest.kt
gradle/: libs.versions.toml
